feat: use more layouts
Former-commit-id: a0724bc80d6c4371499bf71d5f3723225c026d30

--- a/collections/_graves/newwolf.html
+++ b/collections/_graves/newwolf.html
@@ -1,6 +1,9 @@
 ---
-layout: default
+layout: graveyard
 name: Нововолковское кладбище
+maps:
+  yandex: https://yandex.ru/map-widget/v1/-/CCU6vIbF1B
+  google: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2612.005594067883!2d30.35728381642311!3d59.882079331855685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696301ea9632fd1%3A0x43adc5784632e90b!2sVolkovskoye%20Municipal%20Okrug%2C%20St%20Petersburg%2C%20192102!5e1!3m2!1sen!2sru!4v1667890634520!5m2!1sen!2sru
 photos:
   - path: /assets/images/newwolf/IMG_1813.jpeg
   - path: /assets/images/newwolf/IMG_1811.jpeg
@@ -16,91 +19,22 @@ buried:
     deathDate: 05.11.2015
 ---
 
-<div class="container text-center" id="start">
-  <h1 class="display-3">{{ page.name }}</h1>
-</div>
-
-<div class="container">
-  <p class="display-4 text-center">Местоположение</p>
-
+<p class="display-6 text-center">Как найти</p>
+<div class="alert alert-warning">
   <p>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#yandexmaps" aria-expanded="false" aria-controls="yandexmaps">Яндекс Карты</button>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#googlemaps" aria-expanded="false" aria-controls="googlemap">Google Maps</button>
+    Во время ковидных ограничений вход со стороны Козловского пер. был заварен и надо было идти с другой стороны.
   </p>
-
-  <div class="row">
-    <div class="collapse ratio ratio-4x3" id="yandexmaps">
-      <a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a>
-      <a href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.360218%2C59.881760&mode=search&sll=30.360096%2C59.883801&text=59.883801%2C30.360096&utm_medium=mapframe&utm_source=maps&z=15.92" style="color:#eee;font-size:12px;position:absolute;top:14px;">Ново-Волковское кладбище — Яндекс Карты</a>
-      <iframe src="https://yandex.ru/map-widget/v1/-/CCU6vIbF1B" allowfullscreen="true"></iframe>
-    </div>
-
-    <div class="collapse ratio ratio-4x3" id="googlemaps">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2612.005594067883!2d30.35728381642311!3d59.882079331855685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696301ea9632fd1%3A0x43adc5784632e90b!2sVolkovskoye%20Municipal%20Okrug%2C%20St%20Petersburg%2C%20192102!5e1!3m2!1sen!2sru!4v1667890634520!5m2!1sen!2sru" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </div>
-
-  <div class="container">
-    <p class="display-6 text-center">Как найти</p>
-    <div class="alert alert-warning">
-      <p>
-        Во время ковидных ограничений вход со стороны Козловского пер. был заварен и надо было идти с другой стороны.
-      </p>
-      <p>
-        Также при входе есть большой перепад высот, поэтому в скользкое и мокрое время нужно быть предельно осторожным.
-      </p>
-    </div>
-    <p>
-      Заходим с пересечения Козловского пер. и Стрельбищенской ул. Проходим между желтым двухэтажным зданием и бетонной стеной и пролезаем через дырку в заборе.
-    </p>
-    <p>
-      Попадаем сразу на дорожку и идем по ней (на запад) до первого пересечения. На пересечении сворачиваем направо.
-    </p>
-    <p>
-      Примерно через 100 метров справа будет дерево, стоящее в первом ряду могил, за которым синяя ограда. Прямо за могилой с синей оградой находится искомая могила.
-    </p>
-    <p><em>Дополнительный ориентир - через пару метров с левой стороны дороги располагается широкая дорогая черная могила. Ее можно заметить на одной из фотографий ниже.</em></p>
-  </div>
+  <p>
+    Также при входе есть большой перепад высот, поэтому в скользкое и мокрое время нужно быть предельно осторожным.
+  </p>
 </div>
-
-<hr>
-
-<div class="container">
-  <p class="display-4 text-center">Похоронены</p>
-
-  <div class="container px-4 pt-3">
-    <div class="row row-cols-auto g-3">
-      {% for buried in page.buried %}
-      <div class="col">
-        <div class="card col-md-4 text-center" style="width: 18rem;">
-          <div class="card-body col-sm">
-            <h5 class="card-title">{{ buried.name }}</h5>
-            <div class="card-text">{{ buried.birthDate }} - {{ buried.deathDate }}</div>
-            <br/>
-          </div>
-          {% if buried.link %}
-          <a class="btn btn-primary stretched-link" href="{{ buried.link | relative_url }}#start">Подробнее...</a>
-          {% endif %}
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</div>
-
-<hr>
-
-<div class="container">
-  <p class="display-4 text-center">Фотографии</p>
-
-  {% for photo in page.photos %}
-  <figure class="figure">
-    <img src="{{ photo.path | relative_url }}" class="figure-img img-fluid rounded" style="max-height: 90vh;">
-    {% if photo.caption %}
-    <figcaption class="figure-caption text-center font-weight-bold text-black">
-      {{ photo.caption }}
-    </figcaption>
-    {% endif %}
-  </figure>
-  {% endfor %}
-</div>
+<p>
+  Заходим с пересечения Козловского пер. и Стрельбищенской ул. Проходим между желтым двухэтажным зданием и бетонной стеной и пролезаем через дырку в заборе.
+</p>
+<p>
+  Попадаем сразу на дорожку и идем по ней (на запад) до первого пересечения. На пересечении сворачиваем направо.
+</p>
+<p>
+  Примерно через 100 метров справа будет дерево, стоящее в первом ряду могил, за которым синяя ограда. Прямо за могилой с синей оградой находится искомая могила.
+</p>
+<p><em>Дополнительный ориентир - через пару метров с левой стороны дороги располагается широкая дорогая черная могила. Ее можно заметить на одной из фотографий ниже.</em></p>
