--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 
 <div class="container px-4 pt-3">
   <div class="row row-cols-auto g-5">
-    {% for grave in site.graves %}
+    {% for grave in site.graveyards %}
     <div class="col">
       <div class="card col-md-4 text-center shadow-lg" style="width: 18rem;">
         <div class="card-body col-sm">
