--- a/collections/_people/reksam.html
+++ b/collections/_people/reksam.html
@@ -1,9 +1,13 @@
 ---
 layout: people
 name: Думченко Сергей Николаевич
+
 birthDate: 13.06.1962
 deathDate: 05.11.2021
+grave: river
+
 epitaph: Как много нашего ушло с тобой, как много твоего осталось с нами...
+
 mainPhoto:
   path: /assets/images/reksam/IMG_0204.jpeg
 carouselPhotos:
